more tweaks for less issue on ios delete all local routes

--- a/viewer/avnav_viewer.less
+++ b/viewer/avnav_viewer.less
@@ -708,6 +708,9 @@ button#avb_RoutePageDownload{
 button#avb_RoutePageUpload{
   .avn_button_icon_base('images/upload32.png');
 }
+button#avb_RoutePageDelete{
+  .avn_button_icon_base('images/trash32.png');
+}
 .avn_route_btnDelete{
   .avn_button_icon_base('images/trash32.png');
 }
